src/k8s/platform/services/headlamp/middleware-https-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: headlamp-https-redirect
  namespace: headlamp
spec:
  redirectScheme:
    scheme: https
    permanent: true
