src/k8s/platform/services/headlamp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp
  namespace: headlamp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: headlamp-headlamp-https-redirect@kubernetescrd,oauth2-proxy-oauth2-sign-in-errors@kubernetescrd,oauth2-proxy-headlamp-forward-auth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - headlamp.sgf.dev
      secretName: headlamp-tls
  rules:
    - host: headlamp.sgf.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headlamp
                port:
                  number: 80
